--- a/app/src/main/res/layout/layout_map_n_pictures_verticallist_new.xml
+++ b/app/src/main/res/layout/layout_map_n_pictures_verticallist_new.xml
@@ -7,7 +7,7 @@
     <ImageButton
         android:id="@+id/verticalList_New"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="50sp"
         android:scaleType="fitCenter"
         android:background="@color/colorPrimary"
         android:src="@drawable/addnew"
