--- a/app/src/main/res/layout/activity_diary_edit.xml
+++ b/app/src/main/res/layout/activity_diary_edit.xml
@@ -60,28 +60,26 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/diary_edit_topbar">
 
-        <TextView
-            android:id="@+id/diary_edit_titleLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:gravity="center_vertical"
-            android:layout_marginStart="10dp"
-            android:text="제목"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="@id/diary_edit_TitleText"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="@id/diary_edit_TitleText" />
-
-        <EditText
-            android:id="@+id/diary_edit_TitleText"
-            android:layout_width="0dp"
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/diary_edit_TitleBox"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
-            android:maxLines="1"
-            android:textSize="20sp"
-            app:layout_constraintLeft_toRightOf="@id/diary_edit_titleLabel"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:background="@drawable/rounded_rectangle"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:padding="10dp">
+            <EditText
+                android:id="@+id/diary_edit_TitleText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:maxLines="1"
+                android:textSize="20sp"
+                android:hint="제목"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </android.support.constraint.ConstraintLayout>
 
         <TextView
             android:id="@+id/diary_edit_listLabel"
@@ -89,48 +87,49 @@
             android:layout_height="wrap_content"
             android:text="사진 목록"
             android:textSize="20sp"
-            android:layout_marginVertical="15dp"
+            android:layout_marginTop="10dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/diary_edit_TitleText" />
+            app:layout_constraintTop_toBottomOf="@id/diary_edit_TitleBox" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/diary_edit_ImageList"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@id/diary_edit_divider"
+            android:layout_marginBottom="10dp"
+            app:layout_constraintBottom_toTopOf="@id/diary_edit_descriptionBox"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/diary_edit_listLabel">
 
         </android.support.v7.widget.RecyclerView>
 
-        <View
-            android:id="@+id/diary_edit_divider"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="#000000"
-            android:layout_marginVertical="15dp"
-            app:layout_constraintBottom_toTopOf="@id/diary_edit_descriptionLabel"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/diary_edit_ImageList" />
-
-        <TextView
-            android:id="@+id/diary_edit_descriptionLabel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="내용"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@id/diary_edit_DescriptionText"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/diary_edit_divider" />
-
-        <EditText
-            android:id="@+id/diary_edit_DescriptionText"
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/diary_edit_descriptionBox"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHeight_percent="0.3"
-            app:layout_constraintLeft_toLeftOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:background="@drawable/rounded_rectangle"
+            android:padding="10dp">
+            <TextView
+                android:id="@+id/diary_edit_descriptionLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="내용"
+                android:textSize="20sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <EditText
+                android:id="@+id/diary_edit_DescriptionText"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:textSize="20sp"
+                app:layout_constraintTop_toBottomOf="@id/diary_edit_descriptionLabel"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent" />
+        </android.support.constraint.ConstraintLayout>
+
     </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
