--- a/app/src/main/res/layout/layout_map_n_pictures_verticallist.xml
+++ b/app/src/main/res/layout/layout_map_n_pictures_verticallist.xml
@@ -3,17 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/verticalList_Root"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="100sp"
     android:background="@drawable/rounded_rectangle"
     android:layout_marginBottom="10dp">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/verticalList_UpDownBox"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@id/verticalList_Image"
-        app:layout_constraintBottom_toBottomOf="@id/verticalList_Image"
         app:layout_constraintWidth_percent="0.1">
 
         <ImageButton
@@ -21,7 +19,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:src="@drawable/moveup"
-            android:scaleType="centerCrop"
+            android:scaleType="fitCenter"
             android:background="#00000000"
             app:layout_constraintBottom_toTopOf="@id/verticalList_MoveDown"
             app:layout_constraintDimensionRatio="1:1"
@@ -36,7 +34,7 @@
             android:layout_height="0dp"
             android:src="@drawable/movedown"
             android:background="#00000000"
-            android:scaleType="centerCrop"
+            android:scaleType="fitCenter"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintHeight_percent="0.3"
