--- a/app/src/main/res/layout/layout_zoomin.xml
+++ b/app/src/main/res/layout/layout_zoomin.xml
@@ -69,6 +69,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15sp"
             android:text="확인"
+            android:background="@color/colorPrimary"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp"
             android:visibility="gone"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/diary_ZoomIn_ZoomImage" />
