--- a/app/src/main/res/layout/activity_diary_main.xml
+++ b/app/src/main/res/layout/activity_diary_main.xml
@@ -126,7 +126,23 @@
             android:visibility="visible" />
     </android.support.constraint.ConstraintLayout>
 
-
+    <ImageButton
+        android:id="@+id/diary_main_NewImage"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:translationZ="1px"
+        android:src="@drawable/add"
+        android:scaleType="centerInside"
+        android:background="#00000000"
+        android:layout_marginBottom="20dp"
+        android:layout_marginRight="20dp"
+        android:visibility="visible"
+        android:onClick="diary_main_AddNewImage"
+        android:contentDescription="사진 올리기"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintHeight_percent="0.1"
+        app:layout_constraintRight_toRightOf="parent" />
     <ImageButton
         android:id="@+id/diary_main_NewDiary"
         android:layout_width="0dp"
