--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -36,7 +35,7 @@
         android:textSize="20sp"
         android:layout_marginLeft="10dp"
         android:text="Back"
-        android:onClick="OnClickBack"
+        android:onClick="onClickBack"
         app:layout_constraintBottom_toBottomOf="@id/sign_up_upper_guideline"
         app:layout_constraintLeft_toLeftOf="parent" />
 
