--- a/app/src/main/res/layout/layout_splash.xml
+++ b/app/src/main/res/layout/layout_splash.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
+
     <View
         android:layout_width="match_parent"
         android:layout_height="0sp"
@@ -10,39 +11,34 @@
         app:layout_constraintBottom_toTopOf="@id/guide_login_horizontal_boundary"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
     <android.support.constraint.Guideline
         android:id="@+id/guide_start_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.45"/>
-    <android.support.constraint.Guideline
-        android:id="@+id/guide_start_vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.18"/>
-    <android.support.constraint.Guideline
-        android:id="@+id/guide_start_vertical_pic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.33"/>
+        app:layout_constraintGuide_percent="0.45" />
+
     <ImageView
         android:id="@+id/start_logo_icon"
         android:layout_width="0sp"
         android:layout_height="0sp"
         android:src="@drawable/logo"
-        app:layout_constraintDimensionRatio="H,1:1"
-        app:layout_constraintLeft_toRightOf="@id/guide_start_vertical"
-        app:layout_constraintRight_toLeftOf="@id/guide_start_vertical_pic"
-        app:layout_constraintBottom_toTopOf="@id/guide_start_horizontal"/>
+        app:layout_constraintBottom_toTopOf="@id/guide_start_horizontal"
+        app:layout_constraintDimensionRatio="1"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/tv_logo"
+        app:layout_constraintWidth_percent="0.15" />
+
     <TextView
+        android:id="@+id/tv_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
         android:text="LANDMARKS"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@id/guide_start_horizontal"
         app:layout_constraintLeft_toRightOf="@id/start_logo_icon"
-        app:layout_constraintBottom_toTopOf="@id/guide_start_horizontal"/>
+        app:layout_constraintRight_toRightOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
