--- a/app/src/main/res/layout/layout_login.xml
+++ b/app/src/main/res/layout/layout_login.xml
@@ -27,25 +27,26 @@
         android:id="@+id/login_upper_guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintGuide_percent="0.065"
-        android:orientation="horizontal"/>
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.065" />
 
     <ImageView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:src="@drawable/logo"
         android:padding="5dp"
+        android:src="@drawable/logo"
+        app:layout_constraintBottom_toTopOf="@id/login_upper_guideline"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/login_upper_guideline"
         app:layout_constraintTop_toTopOf="parent" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#000000"
+        app:layout_constraintBottom_toBottomOf="@id/login_upper_guideline"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/login_upper_guideline"/>
+        app:layout_constraintRight_toRightOf="parent" />
 
 
     <android.support.constraint.Guideline
@@ -129,28 +130,34 @@
         android:layout_width="0dp"
         android:layout_height="18sp"
         app:layout_constraintBottom_toTopOf="@id/guide_login_horizontal_mid"
-        app:layout_constraintStart_toStartOf="@id/btn_login"/>
+        app:layout_constraintStart_toStartOf="@id/btn_login" />
+
     <TextView
         style="@style/CustomFontStyle"
         android:layout_width="0dp"
-        android:layout_height="18sp"
+        android:layout_height="15sp"
         android:text="Remember ID"
-        app:layout_constraintBottom_toTopOf="@id/guide_login_horizontal_mid"
-        app:layout_constraintStart_toEndOf="@id/cb_remember_id"/>
+        android:textSize="11sp"
+        app:layout_constraintStart_toEndOf="@id/cb_remember_id"
+        app:layout_constraintBottom_toTopOf="@id/guide_login_horizontal_mid" />
+
     <CheckBox
         android:id="@+id/cb_auto_login"
         android:layout_width="0dp"
         android:layout_height="18sp"
         app:layout_constraintBottom_toTopOf="@id/guide_login_horizontal_mid"
-        app:layout_constraintEnd_toStartOf="@id/textview_auto_login"/>
+        app:layout_constraintEnd_toStartOf="@id/textview_auto_login" />
+
     <TextView
         android:id="@+id/textview_auto_login"
         style="@style/CustomFontStyle"
         android:layout_width="0dp"
-        android:layout_height="18sp"
+        app:layout_constraintWidth_percent="0.19"
+        android:layout_height="15sp"
         android:text="Auto login"
+        android:textSize="11sp"
         app:layout_constraintBottom_toTopOf="@id/guide_login_horizontal_mid"
-        app:layout_constraintEnd_toEndOf="@id/btn_login"/>
+        app:layout_constraintEnd_toEndOf="@id/btn_login" />
 
     <ImageView
         android:id="@+id/imageview_login_id_icon"
@@ -203,11 +210,11 @@
         style="@style/CustomFontStyle"
         android:layout_width="0dp"
         android:layout_height="33sp"
+        android:layout_marginTop="15sp"
         android:background="#0d2758"
         android:text="Log in"
         android:textColor="#fff"
         android:textSize="17sp"
-        android:layout_marginTop="15sp"
         app:layout_constraintLeft_toLeftOf="@id/guide_login_vertical_left"
         app:layout_constraintRight_toRightOf="@id/guide_login_vertical_right"
         app:layout_constraintTop_toBottomOf="@id/guide_login_horizontal_mid" />
@@ -217,11 +224,11 @@
         style="@style/CustomFontStyle"
         android:layout_width="0dp"
         android:layout_height="33sp"
+        android:layout_marginTop="15sp"
         android:background="#0d2758"
         android:text="Register now"
         android:textColor="#fff"
         android:textSize="17sp"
-        android:layout_marginTop="15sp"
         app:layout_constraintLeft_toLeftOf="@id/guide_login_vertical_left"
         app:layout_constraintRight_toRightOf="@id/guide_login_vertical_right"
         app:layout_constraintTop_toBottomOf="@id/btn_login" />
