--- a/app/src/main/res/layout/activity_diary_edit.xml
+++ b/app/src/main/res/layout/activity_diary_edit.xml
@@ -125,6 +125,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:textSize="20sp"
+                android:scrollbars="vertical"
                 app:layout_constraintTop_toBottomOf="@id/diary_edit_descriptionLabel"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent" />
