--- a/app/src/main/res/layout/layout_game_loading_animation.xml
+++ b/app/src/main/res/layout/layout_game_loading_animation.xml
@@ -1,37 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:clickable="false">
+
     <View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#C2F2FF"/>
+        android:background="#C2F2FF" />
+
     <android.support.constraint.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/guide_mid_game_loading1"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.45"/>
-    <android.support.constraint.Guideline
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/guide_mid_game_loading2"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.6"/>
+        app:layout_constraintGuide_percent="0.45" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guide_mid_game_loading2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.6" />
+
     <ImageView
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/game_loading_background"/>
+        android:src="@drawable/game_loading_background"
+        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
     <ImageView
         android:id="@+id/game_loading_animation"
-        app:layout_constraintTop_toBottomOf="@id/guide_mid_game_loading1"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:clickable="false"
         app:layout_constraintBottom_toTopOf="@id/guide_mid_game_loading2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"/>
+        app:layout_constraintTop_toBottomOf="@id/guide_mid_game_loading1" />
 </android.support.constraint.ConstraintLayout>
