--- a/app/src/main/res/layout/activity_diary_main.xml
+++ b/app/src/main/res/layout/activity_diary_main.xml
@@ -35,6 +35,7 @@
             app:layout_constraintWidth_percent="0.5">
 
             <TextView
+                android:id="@+id/diary_main_Tab_Left_Text"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#FFFFFF"
@@ -59,6 +60,7 @@
             app:layout_constraintWidth_percent="0.5">
 
             <TextView
+                android:id="@+id/diary_main_Tab_Right_Text"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#FFFFFF"
