Add two new icons to registration fragment

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -123,7 +123,7 @@
         android:id="@+id/profile_id_imageview"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:src="@drawable/login_id_icon"
+        android:src="@drawable/ic_person"
         app:layout_constraintBottom_toTopOf="@id/guide_profile_horizontal_mid"
         app:layout_constraintDimensionRatio="H,1:1"
         app:layout_constraintStart_toStartOf="@id/guide_profile_vertical_left"
