--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -152,7 +152,7 @@
         android:id="@+id/imageview_login_id_icon"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:src="@drawable/login_id_icon"
+        android:src="@drawable/ic_person"
         app:layout_constraintDimensionRatio="H,1:1"
         app:layout_constraintStart_toStartOf="@id/guide_login_vertical_left"
         app:layout_constraintTop_toBottomOf="@id/guide_login_horizontal_edit_text"
@@ -163,7 +163,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
-        android:src="@drawable/login_pw_icon"
+        android:src="@drawable/ic_password"
         app:layout_constraintDimensionRatio="H,1:1"
         app:layout_constraintEnd_toEndOf="@id/guide_login_vertical_left_pic"
         app:layout_constraintStart_toStartOf="@id/guide_login_vertical_left"
