--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -14,48 +14,13 @@
 
     <View
         android:id="@+id/sign_up_bottom_gradient"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/login_bottom_gradient"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@id/guide_sign_up_horizontal_boundary" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/sign_up_upper_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.065" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#000000"
-        app:layout_constraintBottom_toBottomOf="@id/sign_up_upper_guideline"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guide_sign_up_vertical_left"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.2" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guide_sign_up_vertical_right"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.8" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guide_sign_up_vertical_left_pic"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.3" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/guide_sign_up_horizontal_boundary" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guide_sign_up_horizontal_boundary"
@@ -65,25 +30,11 @@
         app:layout_constraintGuide_percent="0.80" />
 
     <android.support.constraint.Guideline
-        android:id="@+id/guide_sign_up_horizontal_edit_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.25" />
-
-    <android.support.constraint.Guideline
         android:id="@+id/guide_sign_up_horizontal_top"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.19" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guide_sign_up_horizontal_mid"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5" />
 
     <TextView
         android:id="@+id/sign_up_textView"
@@ -96,89 +47,119 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
-    <ImageView
-        android:id="@+id/sign_up_iv_loading"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:scaleType="fitCenter"
-        android:src="@drawable/loading_circle"
-        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.42"
-        app:layout_constraintWidth_percent="0.15" />
+        app:layout_constraintDimensionRatio="H,1"
+        app:layout_constraintHeight_percent="0.3"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/guide_sign_up_horizontal_top"
+        app:layout_constraintVertical_bias="0.1"
+        app:layout_constraintWidth_percent="0.6">
 
-    <ImageView
-        android:id="@+id/sign_up_imageview_login_id_icon"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:src="@drawable/login_id_icon"
-        app:layout_constraintDimensionRatio="H,1:1"
-        app:layout_constraintStart_toStartOf="@id/guide_sign_up_vertical_left"
-        app:layout_constraintTop_toBottomOf="@id/guide_sign_up_horizontal_edit_text"
-        app:layout_constraintWidth_percent="0.1" />
+        <ImageView
+            android:id="@+id/iv_sign_up_id"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:src="@drawable/ic_person"
+            android:padding="3dp"
+            app:layout_constraintBottom_toTopOf="@id/iv_sign_up_password"
+            app:layout_constraintDimensionRatio="H,1"
+            app:layout_constraintHeight_percent="0.2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.2" />
 
-    <ImageView
-        android:id="@+id/sign_up_imageview_login_pw_icon"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/login_pw_icon"
-        app:layout_constraintDimensionRatio="H,1:1"
-        app:layout_constraintEnd_toEndOf="@id/guide_sign_up_vertical_left_pic"
-        app:layout_constraintStart_toStartOf="@id/guide_sign_up_vertical_left"
-        app:layout_constraintTop_toBottomOf="@id/sign_up_imageview_login_id_icon" />
+        <ImageView
+            android:id="@+id/iv_sign_up_password"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:padding="3dp"
+            android:src="@drawable/ic_password"
+            app:layout_constraintBottom_toTopOf="@id/iv_sign_up_email"
+            app:layout_constraintDimensionRatio="H,1"
+            app:layout_constraintHeight_percent="0.2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_sign_up_id"
+            app:layout_constraintWidth_percent="0.2" />
 
-    <EditText
-        android:id="@+id/et_sign_up_login"
-        style="@style/CustomFontStyle"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:hint="ID"
-        android:inputType="text"
-        app:layout_constraintBottom_toBottomOf="@id/sign_up_imageview_login_id_icon"
-        app:layout_constraintEnd_toStartOf="@id/guide_sign_up_vertical_right"
-        app:layout_constraintStart_toEndOf="@id/sign_up_imageview_login_id_icon"
-        app:layout_constraintTop_toTopOf="@id/sign_up_imageview_login_id_icon" />
+        <ImageView
+            android:id="@+id/iv_sign_up_email"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:padding="5dp"
+            android:src="@drawable/ic_envelope"
+            app:layout_constraintBottom_toTopOf="@id/iv_sign_up_nick"
+            app:layout_constraintDimensionRatio="H,1"
+            app:layout_constraintHeight_percent="0.2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_sign_up_password"
+            app:layout_constraintWidth_percent="0.2" />
 
-    <EditText
-        android:id="@+id/et_sign_up_password"
-        style="@style/CustomFontStyle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="PASSWORD"
-        android:inputType="textPassword"
-        app:layout_constraintBottom_toBottomOf="@id/sign_up_imageview_login_pw_icon"
-        app:layout_constraintEnd_toStartOf="@id/guide_sign_up_vertical_right"
-        app:layout_constraintStart_toEndOf="@id/sign_up_imageview_login_pw_icon"
-        app:layout_constraintTop_toTopOf="@id/sign_up_imageview_login_pw_icon" />
+        <ImageView
+            android:id="@+id/iv_sign_up_nick"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:padding="5dp"
+            android:src="@drawable/ic_name_tag"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="H,1"
+            app:layout_constraintHeight_percent="0.2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_sign_up_email"
+            app:layout_constraintWidth_percent="0.2" />
 
-    <EditText
-        android:id="@+id/et_sign_up_email"
-        style="@style/CustomFontStyle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:hint="E-MAIL"
-        android:inputType="textEmailAddress"
-        app:layout_constraintEnd_toEndOf="@id/et_sign_up_password"
-        app:layout_constraintStart_toStartOf="@id/et_sign_up_password"
-        app:layout_constraintTop_toBottomOf="@id/et_sign_up_password" />
+        <EditText
+            android:id="@+id/et_sign_up_login"
+            style="@style/CustomFontStyle"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:hint="ID"
+            android:inputType="text"
+            app:layout_constraintBottom_toBottomOf="@id/iv_sign_up_id"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/iv_sign_up_id"
+            app:layout_constraintTop_toTopOf="@id/iv_sign_up_id" />
 
-    <EditText
-        android:id="@+id/et_sign_up_nickname"
-        style="@style/CustomFontStyle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:hint="NICKNAME"
-        android:inputType="text"
-        app:layout_constraintEnd_toEndOf="@id/et_sign_up_email"
-        app:layout_constraintStart_toStartOf="@id/et_sign_up_email"
-        app:layout_constraintTop_toBottomOf="@id/et_sign_up_email" />
+        <EditText
+            android:id="@+id/et_sign_up_password"
+            style="@style/CustomFontStyle"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:hint="PASSWORD"
+            android:inputType="textPassword"
+            app:layout_constraintBottom_toBottomOf="@id/iv_sign_up_password"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/iv_sign_up_password"
+            app:layout_constraintTop_toTopOf="@id/iv_sign_up_password" />
+
+        <EditText
+            android:id="@+id/et_sign_up_email"
+            style="@style/CustomFontStyle"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:hint="E-MAIL"
+            android:inputType="textEmailAddress"
+            app:layout_constraintBottom_toBottomOf="@id/iv_sign_up_email"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/iv_sign_up_email"
+            app:layout_constraintTop_toTopOf="@id/iv_sign_up_email" />
+
+        <EditText
+            android:id="@+id/et_sign_up_nickname"
+            style="@style/CustomFontStyle"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:hint="NICKNAME"
+            android:inputType="text"
+            app:layout_constraintBottom_toBottomOf="@id/iv_sign_up_nick"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/iv_sign_up_nick"
+            app:layout_constraintTop_toTopOf="@id/iv_sign_up_nick" />
+
+    </android.support.constraint.ConstraintLayout>
 
     <Button
         android:id="@+id/btn_sign_up"
@@ -190,9 +171,10 @@
         android:textColor="#fff"
         android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="@id/sign_up_bottom_gradient"
-        app:layout_constraintLeft_toLeftOf="@id/guide_sign_up_vertical_left"
-        app:layout_constraintRight_toRightOf="@id/guide_sign_up_vertical_right"
-        app:layout_constraintTop_toTopOf="@id/sign_up_bottom_gradient" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/sign_up_bottom_gradient"
+        app:layout_constraintWidth_percent="0.6" />
 
     <ImageView
         android:id="@+id/iv_sign_up_loading"
